--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -122,7 +122,7 @@ header .navbar-brand svg path {
 }
 header .navbar-expand-lg .navbar-nav {
   flex: 1;
-  justify-content: flex-end;
+  justify-content: center;
   padding: 10px;
 }
 header .navbar-expand-lg .navbar-nav li {
@@ -138,7 +138,11 @@ header .navbar-expand-lg .navbar-nav li a.nav-link {
 header .navbar-expand-lg .navbar-nav li a.nav-link::after {
   display: block;
   content: "";
-  border-bottom: solid 2px #f7c35f;
+  text-align: center;
+  border-bottom: 2px solid transparent;
+  border-image: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(0, 178, 177), rgba(0, 0, 0, 0));
+  border-image-slice: 1;
+  width: 100%;
   transform: scaleX(0);
   transition: transform 500ms ease-in-out;
 }
@@ -393,7 +397,7 @@ header .fz_sigin ul .unlock a:hover svg path {
   min-width: 960px;
   transform: translateX(-50%);
   top: 39px;
-  padding: 30px;
+  padding: 20px;
   margin: 0 auto;
   color: #fff;
   border: 1px solid rgba(255, 255, 255, 0.5);
@@ -417,6 +421,9 @@ header .fz_sigin ul .unlock a:hover svg path {
   padding: 0;
   display: block;
 }
+.column ul p {
+  margin-bottom: 0px;
+}
 
 .dropdown .column ul li a {
   color: white;
@@ -427,7 +434,7 @@ header .fz_sigin ul .unlock a:hover svg path {
 }
 
 .dropdown .column ul li {
-  padding: 25px 15px 10px 15px;
+  padding: 10px;
   line-height: 24px;
   transition: all 0.5s ease;
 }
