--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3783,143 +3783,165 @@ div#faq-animate svg {
 .footer_section {
   background: linear-gradient(359.8deg, rgba(0, 0, 0, 0.46) 5.16%, rgba(97, 97, 97, 0.22) 99.83%);
   background-color: #000000;
-  padding: 200px 0px 0;
+  padding: 150px 0px 0;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .footer_section {
     padding: 60px 0px 0;
   }
 }
-.footer_section .col-lg-4 .footer_logo {
-  width: 150px;
-  height: 50px;
+.footer_section .fz_footer_container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 2rem;
+  color: #c7c7c7;
 }
 @media screen and (max-width: 991px) {
-  .footer_section .col-lg-4 .footer_logo {
-    margin: 0 auto;
+  .footer_section .fz_footer_container {
+    display: block;
   }
 }
-.footer_section .col-lg-4 .footer_logo img {
-  width: 100%;
-  height: 100%;
-}
-.footer_section .col-lg-4 .footer_logo svg path {
-  fill: #3eab90;
-}
-.footer_section .col-lg-4 p {
-  color: #c7c3c3;
-  padding: 20px 0px 10px;
-  font-weight: 400;
-  font-size: 14px;
-  padding-right: 100px;
-}
-@media screen and (max-width: 991px) {
-  .footer_section .col-lg-4 p {
-    text-align: center;
-    padding-right: 0px;
-  }
-}
-.footer_section .col-lg-4 a {
-  color: #c7c3c3;
-  text-decoration: none;
-  padding-top: 10px;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 400;
-}
-@media screen and (max-width: 991px) {
-  .footer_section .col-lg-4 a {
-    text-align: center;
-    display: inline-block;
-    width: 100%;
-    padding-top: 0px;
-  }
-}
-@media screen and (max-width: 991px) {
-  .footer_section .col-lg-4 .footer_num_email {
-    padding-top: 5px;
-    padding-bottom: 10px;
-  }
-}
-.footer_section h5 {
-  color: #c7c3c3;
-  font-size: 22px;
-  line-height: 24px;
-  font-weight: 500;
-  padding-bottom: 20px;
-}
-@media screen and (max-width: 991px) {
-  .footer_section h5 {
-    padding-top: 20px;
-    padding-bottom: 0px;
-  }
-}
-.footer_section ul {
-  padding: 0px;
-  margin: 0px;
-  list-style-type: none;
-}
-.footer_section li {
-  padding: 5px 0px;
-}
-@media screen and (max-width: 991px) {
-  .footer_section li {
-    padding: 0px;
-  }
-}
-.footer_section li a {
-  color: #c7c3c3;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  text-decoration: none;
-  transition: all 0.5s ease;
-}
-.footer_section li a:hover {
-  margin-left: 4px;
-  color: #f7c35f;
-}
-.footer_section .copy_rights {
+.footer_section .fz_footer_container .footer-brand {
   display: flex;
-  justify-content: space-between;
-  padding: 60px 0px;
-  align-items: center;
-}
-.footer_section .copy_rights .copy_rights_1 {
-  color: #c7c3c3;
-}
-.footer_section .copy_rights .copy_rights_1 p {
-  margin: 0;
-  font-size: 14px;
-}
-.footer_section .copy_rights .copy_rights_1 ul li {
-  display: inline-block;
-  padding: 0px 5px;
-}
-.footer_section .copy_rights .copy_rights_1.fz_social_icon a {
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  background: rgba(32, 39, 44, 0.4117647059);
-  line-height: 35px;
-}
-.footer_section .copy_rights .copy_rights_1.fz_social_icon a:hover {
-  background: #f7c35f;
-}
-.footer_section .copy_rights .copy_rights_1:nth-child(2) ul li a:hover, .footer_section .copy_rights .copy_rights_1:nth-child(3) ul li a:hover {
-  margin-left: 0;
+  flex-direction: column;
+  gap: 1rem;
+  width: 375px;
 }
 @media screen and (max-width: 991px) {
-  .footer_section .copy_rights {
-    flex-direction: column;
-    text-align: center;
-    padding: 40px 0px;
+  .footer_section .fz_footer_container .footer-brand {
+    padding-bottom: 30px;
   }
-  .footer_section ul {
-    margin-bottom: 20px;
+}
+.footer_section .fz_footer_container .footer-brand .logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #c3f53c;
+  text-decoration: none;
+}
+.footer_section .fz_footer_container .footer-brand p {
+  color: #949894;
+  font-size: 14px;
+  width: 290px;
+  text-decoration: none;
+}
+.footer_section .fz_footer_container .social-links {
+  display: flex;
+  gap: 1.5rem;
+}
+.footer_section .fz_footer_container .social-links .icon {
+  padding: 4px 10px;
+  text-decoration: none;
+  color: #c7c7c7;
+  background-color: rgba(0, 237, 255, 0.1607843137);
+  border-radius: 4px;
+  border: solid 1px transparent;
+}
+.footer_section .fz_footer_container .social-links .icon:hover {
+  color: #0b0d0d;
+  border-color: #05311d;
+  --border-angle: -160deg;
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  --main-bg: conic-gradient(from var(--border-angle), #000 0%, rgb(0, 0, 0) 100%);
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 25%, #000000, #00ffc0 50%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  transition: --border-angle 2s ease-in-out;
+  border: solid 1px transparent;
+}
+.footer_section .fz_footer_container .social-links .icon:hover svg path {
+  fill: #3eab90; /* Change to your preferred color */
+}
+.footer_section .fz_footer_container .social-links .icon svg {
+  width: 14px;
+  height: 14px;
+}
+.footer_section .fz_footer_container .links-group h4 {
+  color: #C7DAD9;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 30px;
+}
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .links-group h4 {
+    line-height: 10px;
+    margin: 25px 0px 0px 0px;
   }
+}
+.footer_section .fz_footer_container .links-group ul {
+  list-style: none;
+  margin-top: 14px;
+}
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .links-group ul {
+    margin-top: 8px;
+  }
+}
+.footer_section .fz_footer_container .links-group ul li {
+  padding: 3px 0px;
+}
+.footer_section .fz_footer_container .links-group ul li a {
+  color: #949894;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
+}
+.footer_section .fz_footer_container .links-group ul li a:hover {
+  color: #00B2B1;
+  letter-spacing: 0.4px;
+  transition: all 1s ease;
+}
+.footer_section .fz_footer_container .subscribe .subscribe-form {
+  position: relative;
+  margin: 20px 0px;
+  display: inline-block;
+}
+.footer_section .fz_footer_container .subscribe .subscribe-form input {
+  width: 286px;
+  padding: 16px;
+  font-size: 14px;
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  border-radius: 96px;
+  color: #ffffff;
+  border: solid 1px transparent;
+  --main-bg: conic-gradient(from var(--border-angle), #000 0%, rgb(0, 0, 0) 100%);
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3eab90 49%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  animation: bg-spin 6s linear infinite;
+  cursor: pointer;
+  position: relative;
+}
+@keyframes bg-spin {
+  to {
+    --border-angle: 1turn;
+  }
+}
+.footer_section .fz_footer_container .subscribe .subscribe-form input::placeholder {
+  color: rgba(228, 241, 242, 0.3490196078);
+}
+.footer_section .fz_footer_container .subscribe .subscribe-form input:hover {
+  border: 1px solid #3eab90;
+  transition: all 4s ease;
+}
+.footer_section .fz_footer_container .subscribe .subscribe-form input:focus {
+  outline: 0;
+  box-shadow: rgb(0, 178, 177) 0 0 5px 3px;
+}
+.footer_section .fz_footer_container .subscribe .subscribe-form .footer_arrow img {
+  position: absolute;
+  right: 19px;
+  bottom: 19px;
+}
+.footer_section .footer-bottom .horizontal-line {
+  border: none;
+  border-top: 1px solid #FCFCFC;
+  margin: 50px auto 5px auto;
+  width: 84%;
+  opacity: 24%;
+}
+.footer_section .footer-bottom p {
+  color: #949894;
+  text-align: center;
+  padding: 10px 0px 50px 0px;
+  text-decoration: none;
 }
 
 /* =======scroll====top===== */
