--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -1,165 +1,193 @@
 @import './variable.scss';
-.footer_section{
-    // background: linear-gradient(359.8deg, rgba(26, 50, 48, 0.46) 5.16%, rgba(62, 171, 144, 0.22) 99.83%);
-    background: linear-gradient(359.8deg, rgb(0 0 0 / 46%) 5.16%, rgb(97 97 97 / 22%) 99.83%);;
-    background-color: $black;
-    padding: 200px 0px 0;
-    @media screen and (max-width:992px) {
-        padding: 60px 0px 0; 
-    }
-    .col-lg-4 {
-        .footer_logo{
-            width: 150px;
-            height: 50px;
 
-            @media screen and (max-width:991px) {
-                margin: 0 auto;
-            }
-            img{
-                width: 100%;
-                height: 100%;
-            }
-            svg path {
-                fill: #3eab90;
-            }
-        }
-        
-        p{
-            color: #c7c3c3;
-            padding: 20px 0px 10px;
-            font-weight: 400;
-            font-size: 14px;
-            padding-right: 100px;
-            @media screen and (max-width:991px) {
-                text-align: center;
-                padding-right: 0px;
-            }
-        }
-        a{
-            color: #c7c3c3;
-            text-decoration: none;
-            padding-top: 10px;
-            font-size: 14px;
-            line-height: 22px;
-            font-weight: 400;
-            @media screen and (max-width:991px) {
-                text-align: center;
-                display: inline-block;
-                width: 100%;
-                padding-top: 0px;
-              
-                
-            }
-        }
-        .footer_num_email{
-            @media screen and (max-width:991px) {
-                padding-top: 5px;
-                padding-bottom: 10px;
-            }
-            
-        }
-    }
-    // .col-lg-2{
-    //     padding-left:20px;
-    // }
-//     @media screen and (min-width:991px) {
-//     .footer-first-col{
-//         padding-left: 90px;
-//     }
-// }
-    h5{
-        color: #c7c3c3;
-        font-size: 22px;
-        line-height: 24px;
-        font-weight: 500;
-        padding-bottom: 20px;
-        @media screen and (max-width:991px) {
-            padding-top: 20px;
-            padding-bottom: 0px;
-        }
-    }
-    ul{
-        padding: 0px;
-        margin: 0px;
-        list-style-type: none;
-    }
-    li{
-        padding: 5px 0px;
-        @media screen and (max-width: 991px) {
-            padding: 0px;
-          }
-        a{
-            color: #c7c3c3;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 22px;
-            text-decoration: none;
-            transition: all 0.5s ease;
-                    &:hover {
-                        margin-left: 4px;
-                      color: $secondary-color;
-                    }
-        }
-    }
-    .copy_rights{
-        display: flex;
-        justify-content: space-between;
-        padding: 60px 0px;
-        align-items: center;
-        .copy_rights_1{
-            color: #c7c3c3;
-            p{
-                margin: 0;
-                font-size: 14px;
-            }
-            ul{
-                li{
-                    display: inline-block;
-                    padding: 0px 5px;
-                }
-            }
-            &.fz_social_icon {
-                a {
-                    width: 40px;
-                    height: 40px;
-                    display: inline-block;
-                    text-align: center;
-                    border-radius: 50%;
-                    background: #20272c69;
-                    line-height: 35px;
-                    &:hover{
-                        background: $secondary-color;
-                    }
-                }
-            }
-            &:nth-child(2),  &:nth-child(3) {
-                ul {
-                    li {
-                        a {
-                            &:hover{
-                                margin-left: 0;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-    @media screen and (max-width:991px) {
-        .copy_rights{
-            flex-direction: column;
-            text-align: center;
-            padding: 40px 0px;
-        }
-        ul{
-            margin-bottom:20px;
-        }
-       
-      }
+.footer_section {
+  background: linear-gradient(359.8deg, rgb(0 0 0 / 46%) 5.16%, rgb(97 97 97 / 22%) 99.83%);
+  background-color: $black;
+  padding: 150px 0px 0;
 
+  @media screen and (max-width: 991px) {
+    padding: 60px 0px 0;
+  }
+
+  
+
+
+.fz_footer_container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 2rem;
+  color: #c7c7c7;
+  @media screen and (max-width: 991px) {
+   display: block;
+  }
+
+.footer-brand {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 375px;
+  @media screen and (max-width: 991px) {
+    padding-bottom: 30px;
+   }
+
+  .logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #c3f53c;
+    text-decoration: none;
+  }
+
+  p {
+    color: #949894;
+    font-size: 14px;
+    width: 290px;
+    text-decoration: none;
+  }
 }
 
+.social-links {
+  display: flex;
+  gap: 1.5rem;
 
+  .icon {
+    padding: 4px 10px;
+    text-decoration: none;
+    color: #c7c7c7;
+    background-color: #00EDFF29;
+    border-radius: 4px;
+    border: solid 1px transparent;
+
+    &:hover {
+      color: #0b0d0d;
+      border-color: #05311d;
+      --border-angle: -160deg;
+      background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+      --main-bg: conic-gradient(from var(--border-angle), #000 0%, rgb(0, 0, 0) 100%);
+      --gradient-border: conic-gradient(from var(--border-angle), transparent 25%, #000000, #00ffc0 50%, transparent);
+      background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+      transition: --border-angle 2s ease-in-out;
+      border: solid 1px transparent;
+      
+    }
+    &:hover svg path {
+      fill: #3eab90; /* Change to your preferred color */
+  }
+    svg {
+      width:14px;
+      height:14px;
+  //     &:hover {
+  //   path{
+  //     fill:#3eab90; 
+    
+  //   }
+    
+  // }
+    }
+  }
+ 
+}
+  .links-group {
+    h4 {
+      color: #C7DAD9;
+      text-decoration: none;
+      font-size: 18px;
+      line-height: 30px;
+      @media screen and (max-width: 991px) {
+        line-height: 10px;
+        margin: 25px 0px 0px 0px;
+       }
+    }
+
+    ul {
+      list-style: none;
+      margin-top: 14px;
+      @media screen and (max-width: 991px) {
+        margin-top: 8px;
+       }
+
+      li {
+        padding: 3px 0px;
+        a {
+          color: #949894;
+          text-decoration: none;
+          font-size: 14px;
+          font-weight: 400;
+         
+          &:hover {
+            color: #00B2B1;
+            letter-spacing: 0.4px;
+            transition: all 1s ease;
+          }
+        }
+      }
+    }
+  }
+
+.subscribe{
+// width:330px;
+
+.subscribe-form {
+  position: relative;
+  margin: 20px 0px;
+  display: inline-block;
+  
+  input {
+    width: 286px;
+    padding: 16px;
+    font-size: 14px;
+    background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+    border-radius: 96px;
+    color: #ffffff;
+    border: solid 1px transparent;
+    --main-bg: conic-gradient(from var(--border-angle), #000 0%, rgb(0, 0, 0) 100%);
+    --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3eab90 49%, transparent);
+    background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+    animation: bg-spin 6s linear infinite;
+    cursor: pointer;
+    position: relative;
+    @keyframes bg-spin {
+      to {
+        --border-angle: 1turn;
+      }
+    }
+
+    &::placeholder {
+      color: #e4f1f259;
+    }
+    &:hover {
+      border: 1px solid #3eab90;
+      transition: all 4s ease;
+    }
+    &:focus {
+    outline: 0;
+    box-shadow: rgba(0, 178, 177, 100) 0 0 5px 3px;
+    }
+
+  }
+  .footer_arrow img{
+    position: absolute;
+    right:19px;
+    bottom:19px;
+  }
+}
+}
+}
+.footer-bottom {
+  .horizontal-line {
+    border: none;
+    border-top: 1px solid #FCFCFC; 
+    margin: 50px auto 5px auto;
+    width:84%; 
+    opacity: 24%;
+  }
+  p {
+    color: #949894;
+    text-align: center;
+    padding: 10px 0px 50px 0px;
+    text-decoration: none;
+  }
+}
+}
 /* =======scroll====top===== */
 #scroll_top {
 	display: inline-block;
@@ -245,3 +273,4 @@
         padding: 0 15px;
     }
 }
+
