--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,48 +14,48 @@ li {
 
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Light.eot");
-  src: url("/assets/font/Poppins-Light.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Light.woff2") format("woff2"), url("/assets/font/Poppins-Light.woff") format("woff"), url("/assets/font/Poppins-Light.ttf") format("truetype");
+  src: url("../..../../assets/font/Poppins-Light.eot");
+  src: url("../../assets/font/Poppins-Light.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Light.woff2") format("woff2"), url("../../assets/font/Poppins-Light.woff") format("woff"), url("../../assets/font/Poppins-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Bold.eot");
-  src: url("/assets/font/Poppins-Bold.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Bold.woff2") format("woff2"), url("/assets/font/Poppins-Bold.woff") format("woff"), url("/assets/font/Poppins-Bold.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-Bold.eot");
+  src: url("../../assets/font/Poppins-Bold.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Bold.woff2") format("woff2"), url("../../assets/font/Poppins-Bold.woff") format("woff"), url("../../assets/font/Poppins-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Medium.eot");
-  src: url("/assets/font/Poppins-Medium.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Medium.woff2") format("woff2"), url("/assets/font/Poppins-Medium.woff") format("woff"), url("/assets/font/Poppins-Medium.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-Medium.eot");
+  src: url("../../assets/font/Poppins-Medium.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Medium.woff2") format("woff2"), url("../../assets/font/Poppins-Medium.woff") format("woff"), url("../../assets/font/Poppins-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-SemiBold.eot");
-  src: url("/assets/font/Poppins-SemiBold.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-SemiBold.woff2") format("woff2"), url("/assets/font/Poppins-SemiBold.woff") format("woff"), url("/assets/font/Poppins-SemiBold.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-SemiBold.eot");
+  src: url("../../assets/font/Poppins-SemiBold.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-SemiBold.woff2") format("woff2"), url("../../assets/font/Poppins-SemiBold.woff") format("woff"), url("../../assets/font/Poppins-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Regular.eot");
-  src: url("/assets/font/Poppins-Regular.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Regular.woff2") format("woff2"), url("/assets/font/Poppins-Regular.woff") format("woff"), url("/assets/font/Poppins-Regular.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-Regular.eot");
+  src: url("../../assets/font/Poppins-Regular.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Regular.woff2") format("woff2"), url("../../assets/font/Poppins-Regular.woff") format("woff"), url("../../assets/font/Poppins-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Thin.eot");
-  src: url("/assets/font/Poppins-Thin.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Thin.woff2") format("woff2"), url("/assets/font/Poppins-Thin.woff") format("woff"), url("/assets/font/Poppins-Thin.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-Thin.eot");
+  src: url("../../assets/font/Poppins-Thin.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Thin.woff2") format("woff2"), url("../../assets/font/Poppins-Thin.woff") format("woff"), url("../../assets/font/Poppins-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -186,17 +186,18 @@ header .navbar-expand-lg .navbar-nav {
   justify-content: center;
   padding: 10px;
 }
-header .navbar-expand-lg .navbar-nav li {
+header .navbar-expand-lg .navbar-nav > li {
   padding: 0px 15px;
   font-size: 14px;
+  position: unset;
 }
-header .navbar-expand-lg .navbar-nav li a.nav-link {
+header .navbar-expand-lg .navbar-nav > li a.nav-link {
   font-weight: 400;
   color: #ffffff;
   position: relative;
   transition: all 0.5s ease;
 }
-header .navbar-expand-lg .navbar-nav li a.nav-link::after {
+header .navbar-expand-lg .navbar-nav > li a.nav-link::after {
   display: block;
   content: "";
   text-align: center;
@@ -208,22 +209,122 @@ header .navbar-expand-lg .navbar-nav li a.nav-link::after {
   transition: transform 500ms ease-in-out;
 }
 @media screen and (max-width: 991px) {
-  header .navbar-expand-lg .navbar-nav li a.nav-link::after {
+  header .navbar-expand-lg .navbar-nav > li a.nav-link::after {
     border-bottom: none;
     transform: scale(none);
   }
 }
-header .navbar-expand-lg .navbar-nav li a.nav-link:hover {
+header .navbar-expand-lg .navbar-nav > li a.nav-link:hover {
   color: #f7c35f;
 }
-header .navbar-expand-lg .navbar-nav li a.nav-link:hover:after {
+header .navbar-expand-lg .navbar-nav > li a.nav-link:hover:after {
   transform: scaleX(1);
 }
 @media screen and (max-width: 991px) {
-  header .navbar-expand-lg .navbar-nav li {
+  header .navbar-expand-lg .navbar-nav > li {
     padding: 10px 5px;
     color: #ffffff;
   }
+}
+header .navbar-expand-lg .navbar-nav > li .submenu, header .navbar-expand-lg .navbar-nav > li .inner-submenu {
+  display: none;
+  position: absolute;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 50%;
+  left: 50%;
+  transform: translateX(-40%);
+}
+@media screen and (max-width: 991px) {
+  header .navbar-expand-lg .navbar-nav > li .submenu, header .navbar-expand-lg .navbar-nav > li .inner-submenu {
+    position: unset;
+    width: 100% !important;
+  }
+}
+header .navbar-expand-lg .navbar-nav > li .submenu li a, header .navbar-expand-lg .navbar-nav > li .inner-submenu li a {
+  transition: all 0.5s ease;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu li a:hover, header .navbar-expand-lg .navbar-nav > li .inner-submenu li a:hover {
+  background: rgba(0, 75, 75, 0.5);
+}
+header .navbar-expand-lg .navbar-nav > li .submenu li a:hover .fz_text h3, header .navbar-expand-lg .navbar-nav > li .inner-submenu li a:hover .fz_text h3 {
+  color: #04a5a7;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu {
+  background: rgba(6, 54, 50, 0.6);
+}
+header .navbar-expand-lg .navbar-nav > li .submenu a {
+  display: flex;
+  padding: 15px 20px;
+  width: 45%;
+}
+@media screen and (max-width: 991px) {
+  header .navbar-expand-lg .navbar-nav > li .submenu a {
+    width: 100%;
+  }
+}
+header .navbar-expand-lg .navbar-nav > li .submenu .image-text {
+  display: flex;
+  align-items: center;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu .image-text .fz_header_svg {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu .image-text .fz_header_svg svg {
+  width: 18px;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu .image-text .fz_text {
+  padding-left: 10px;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu .image-text .fz_text h3 {
+  font-weight: 600;
+  font-size: 14px;
+  color: #ffffff;
+  margin: 0;
+  transition: all 0.5s ease;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu .image-text .fz_text p {
+  font-size: 12px;
+  margin: 0;
+  color: #DDDEDD;
+}
+header .navbar-expand-lg .navbar-nav > li .inner-submenu {
+  background: rgba(6, 54, 50, 0.1);
+  width: 55%;
+  top: 0px;
+  height: 100%;
+  right: 0px;
+  right: 0;
+  transform: unset;
+  left: unset;
+}
+header .navbar-expand-lg .navbar-nav > li .inner-submenu a {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+header .navbar-expand-lg .navbar-nav > li .inner-submenu a:hover {
+  background: rgba(0, 75, 75, 0.5);
+}
+header .navbar-expand-lg .navbar-nav > li .inner-submenu a h3 {
+  font-weight: 500;
+  font-size: 14px;
+  color: #ffffff;
+  margin: 0;
+  transition: all 0.5s ease;
+}
+header .navbar-expand-lg .navbar-nav > li .inner-submenu a p {
+  font-size: 12px;
+  margin: 0;
+  color: #DDDEDD;
 }
 @media screen and (max-width: 991px) {
   header .fz_sigin {
@@ -445,101 +546,6 @@ header .fz_sigin ul .unlock a:hover svg path {
 #lottie-animation1 svg {
   width: 35px !important;
   height: 35px !important;
-}
-
-.dropdown {
-  position: relative;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.9);
-  min-width: 960px;
-  transform: translateX(-50%);
-  top: 39px;
-  padding: 20px;
-  margin: 0 auto;
-  color: #fff;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 8px;
-  z-index: 1;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-  opacity: 1;
-}
-
-.column {
-  width: 40%;
-}
-
-.column ul {
-  list-style-type: none;
-  padding: 0;
-  display: block;
-}
-.column ul p {
-  margin-bottom: 0px;
-}
-
-.dropdown .column ul li a {
-  color: white;
-  text-decoration: none;
-  justify-content: center;
-  font-size: 14px;
-  transition: all 0.5s ease;
-}
-
-.dropdown .column ul li {
-  padding: 10px;
-  line-height: 24px;
-  transition: all 0.5s ease;
-}
-
-.content-box {
-  display: flex;
-  gap: 40px;
-}
-
-.dropdown .column ul li a {
-  display: flex;
-  justify-content: left;
-  font-weight: 600;
-  transition: all 0.5s ease;
-  color: #ffffff;
-  font-size: 18px;
-}
-
-.image-text li:hover a, .image-text li:hover p {
-  cursor: pointer;
-  transition: all 0.5s ease;
-  color: #f7c35f !important;
-}
-
-.image-text {
-  display: flex;
-  padding: 0px;
-  align-items: center;
-}
-
-.fz_header_svg {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.5s ease;
-}
-
-.image-text:hover .fz_header_svg {
-  background: #f7c35f;
-  border: 1px solid #f7c35f;
 }
 
 @keyframes moveAnimation {
@@ -4002,7 +4008,7 @@ div#faq-animate svg {
   width: 100%;
   height: 100%;
   z-index: 99999;
-  background: url("/assets/images/finzor-loading.gif") center no-repeat #000;
+  background: url("../../assets/images/finzor-loading.gif") center no-repeat #000;
 }
 @media screen and (max-width: 767px) {
   #page-loader {
@@ -4032,4 +4038,168 @@ div#faq-animate svg {
   .container {
     padding: 0 15px;
   }
+}
+#myModal {
+  z-index: 9999;
+  --bs-modal-width: 650px;
+}
+#myModal .modal-content {
+  border: solid 1px transparent;
+  --main-bg: conic-gradient(from var(--border-angle), #000 0%, rgb(0, 0, 0) 100%);
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  animation: bg-spin 2s linear infinite;
+}
+#myModal .modal-content .modal-header {
+  padding: 20px 30px 0 100px;
+  border: 0;
+  flex-direction: column;
+  align-items: start;
+}
+#myModal .modal-content .modal-header h4, #myModal .modal-content .modal-header p {
+  color: #ffffff;
+}
+#myModal .modal-content .modal-header .btn-close {
+  background-color: #ffffff;
+  opacity: 1;
+  position: absolute;
+  right: -8px;
+  top: -8px;
+  border-radius: 50%;
+}
+#myModal .modal-content .modal-body {
+  padding: 15px 100px 30px;
+}
+#myModal .form-wrapper {
+  color: #ffffff;
+}
+#myModal .form-wrapper .form_group {
+  position: relative;
+  margin-bottom: 20px;
+}
+#myModal .form-wrapper .form_group .field-label {
+  color: #34b195;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+  font-family: Space Grotesk, sans-serif;
+  font-size: 14px;
+  line-height: 18.2px;
+}
+#myModal .form-wrapper .form_group input:focus, #myModal .form-wrapper .form_group textarea:focus {
+  border: solid 1px transparent;
+  --main-bg: conic-gradient(from var(--border-angle), #000 0%, rgb(0, 0, 0) 100%);
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  animation: bg-spin 2s linear infinite;
+}
+@keyframes bg-spin {
+  to {
+    --border-angle: 1turn;
+  }
+}
+#myModal .form-wrapper .form_group .text-field-3 {
+  width: 100%;
+  height: 58px;
+  font-size: 14px;
+  border: 1px solid #2D4949;
+  background-color: #000000;
+  color: #fff;
+  border-radius: 0;
+  margin-bottom: 0;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  padding-left: 24px;
+  outline: none;
+  height: 50px;
+}
+#myModal .form-wrapper .comment-wrapper {
+  position: relative;
+  height: 146px;
+  margin-bottom: 30px;
+}
+#myModal .form-wrapper .comment-wrapper .field-label {
+  color: #34b195;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+  font-family: Space Grotesk, sans-serif;
+  font-size: 14px;
+  line-height: 18.2px;
+}
+#myModal .form-wrapper .comment-wrapper .texteria {
+  resize: none;
+  height: auto !important;
+  width: 100%;
+  height: 58px;
+  font-size: 14px;
+  border: 1px solid #2D4949;
+  background-color: #000000;
+  color: #fff;
+  border-radius: 0;
+  margin-bottom: 0;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  padding-left: 24px;
+  outline: none;
+}
+#myModal .form-wrapper .fz_submit {
+  height: 50px;
+  border-radius: 32px;
+  background-color: transparent;
+  outline: none;
+  border: 1px solid #309393;
+  font-size: 16px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  transition: all 1s ease;
+  padding: 0px 20px 0 25px;
+}
+#myModal .form-wrapper .fz_submit .text {
+  position: relative;
+  left: 10px;
+  transition: all 1s ease;
+}
+#myModal .form-wrapper .fz_submit img {
+  opacity: 0;
+  transition: all 1s ease;
+}
+#myModal .form-wrapper .fz_submit .icon {
+  margin-left: 10px;
+}
+#myModal .form-wrapper .fz_submit:hover {
+  padding: 0px 20px 0 25px;
+  --text-color: rgb(210 210 240);
+  --box-glow-color: transparent;
+  --box-glow-blur: 32px;
+  --color: #00afaf85;
+  position: relative;
+  border: none;
+  box-shadow: 0px 3px 0 0px #31b2b2, 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px rgba(29, 77, 45, 0.3607843137);
+  transition: box-shadow 1s ease;
+  --box-glow-color: var(--color);
+  z-index: 2;
+  font-size: 16px;
+  border: 1px solid rgba(62, 171, 144, 0.568627451);
+  background: linear-gradient(0deg, rgb(45, 73, 73) 0%, rgb(49, 178, 178) 100%);
+}
+#myModal .form-wrapper .fz_submit:hover img {
+  opacity: 1;
+}
+#myModal .form-wrapper .fz_submit:hover .icon {
+  margin-left: 10px;
+}
+#myModal .form-wrapper .fz_submit:hover .text {
+  position: relative;
+  left: 0px;
+}
+@media screen and (max-width: 375px) {
+  #myModal .form-wrapper .fz_submit:hover {
+    font-size: 13px;
+  }
+}
+
+.modal-backdrop.show {
+  opacity: 0.8;
 }
