product inner pages implemented and content partially updated

--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -40,7 +40,7 @@ body {
                 color: #00B2B1;
             }
         }
-        .buttons {
+        .cmn-btn {
             @include cmn-btn;
             width: 150px !important;
             --w: 164px !important;
@@ -307,6 +307,7 @@ body {
   .fz_tab_images_features{
       display: flex;
       justify-content: end;
+      align-items: center;
       @media (max-width: 991px) {
           justify-content: center;
       }
@@ -332,6 +333,10 @@ body {
      }
   @media (max-width: 991px) {
       padding: 60px 0px;
+  }
+  .col-lg-6 {
+    display: flex;
+    align-items: center;
   }
   .fz_ai_enhance_img{
       width: 500px;
@@ -361,6 +366,17 @@ body {
           @media (max-width: 991px) {
               text-align: center;
               font-size: 35px;
+              padding-bottom: 20px;
+             }
+      }
+      h3 {
+          color: #D6CA8A;
+          font-size: 24px;
+          font-weight: 500;
+          margin-bottom: 20px;
+          @media (max-width: 991px) {
+              text-align: center;
+              font-size: 20px;
               padding-bottom: 20px;
              }
       }
@@ -531,10 +547,10 @@ body {
                  }
           }
           .get_touch_btn{
-            button {
+            a {
                 @include cmn-btn;
                 width: 156px !important;
-                --w: 174px !important;
+                --w: 176px !important;
               }
               @media (max-width: 991px) {
                   display: flex;
@@ -586,8 +602,7 @@ body {
                 color: $white;
                 font-size: 24px;
                 line-height: 24px;
-                font-weight: 600;
-                text-transform: uppercase;
+                font-weight: 600;;
                 margin: 20px 0 0;
             }
             p {
@@ -597,19 +612,11 @@ body {
                 font-weight: 400;
                 margin: 20px 0;
             }
-            button {
+            .cmn-btn {
                 margin: 0 auto;
                 @include cmn-btn;
-                width: 150px;
-                .icon {
-                    transform: translateX(calc((var(--w)) / 2 + 48px));
-                    img {
-                        width: auto;
-                    }
-                }
-                &::before,&:active::before {
-                    transform: translateX(75%);
-                }
+                width: 150px !important;
+                --w: 156px !important;
             }
         }
     }
@@ -770,10 +777,10 @@ body {
               z-index: -1;
               pointer-events: none;
             }
-            button {
+            .cmn-btn {
               @include cmn-btn;
-              width: 160px !important;
-              --w: 173px !important;
+              width: 150px !important;
+              --w: 156px !important;
             }
           }
           .fin_bankz_img {
