--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1856,7 +1856,7 @@ header .fz_sigin ul .unlock a:hover svg path {
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay .item-pay-text h3 {
   color: #3eab90;
-  font-size: 20px;
+  font-size: 19.4px;
   font-weight: 500;
   line-height: 36px;
 }
@@ -3791,10 +3791,15 @@ div#faq-animate svg {
   }
 }
 .footer_section .fz_footer_container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 2rem;
-  color: #c7c7c7;
+  display: flex;
+  gap: 50px;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer_section .fz_footer_container {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 @media screen and (max-width: 991px) {
   .footer_section .fz_footer_container {
@@ -3805,7 +3810,16 @@ div#faq-animate svg {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 375px;
+  width: 330px;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer_section .fz_footer_container .footer-brand {
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
 }
 @media screen and (max-width: 991px) {
   .footer_section .fz_footer_container .footer-brand {
@@ -3821,8 +3835,13 @@ div#faq-animate svg {
 .footer_section .fz_footer_container .footer-brand p {
   color: #949894;
   font-size: 14px;
-  width: 290px;
+  width: 315px;
   text-decoration: none;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer_section .fz_footer_container .footer-brand p {
+    text-align: center;
+  }
 }
 .footer_section .fz_footer_container .social-links {
   display: flex;
@@ -3854,48 +3873,102 @@ div#faq-animate svg {
   width: 14px;
   height: 14px;
 }
-.footer_section .fz_footer_container .links-group h4 {
+.footer_section .fz_footer_container .footer_list_link {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  color: #c7c7c7;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer_section .fz_footer_container .footer_list_link {
+    gap: 75px;
+    width: 70%;
+    margin: 40px auto;
+  }
+}
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .footer_list_link {
+    display: block;
+  }
+}
+.footer_section .fz_footer_container .footer_list_link .links-group h4 {
   color: #C7DAD9;
   text-decoration: none;
   font-size: 18px;
   line-height: 30px;
 }
 @media screen and (max-width: 991px) {
-  .footer_section .fz_footer_container .links-group h4 {
+  .footer_section .fz_footer_container .footer_list_link .links-group h4 {
     line-height: 10px;
     margin: 25px 0px 0px 0px;
   }
 }
-.footer_section .fz_footer_container .links-group ul {
+.footer_section .fz_footer_container .footer_list_link .links-group ul {
   list-style: none;
   margin-top: 14px;
 }
 @media screen and (max-width: 991px) {
-  .footer_section .fz_footer_container .links-group ul {
+  .footer_section .fz_footer_container .footer_list_link .links-group ul {
     margin-top: 8px;
   }
 }
-.footer_section .fz_footer_container .links-group ul li {
+.footer_section .fz_footer_container .footer_list_link .links-group ul li {
   padding: 3px 0px;
 }
-.footer_section .fz_footer_container .links-group ul li a {
+.footer_section .fz_footer_container .footer_list_link .links-group ul li a {
   color: #949894;
   text-decoration: none;
   font-size: 14px;
   font-weight: 400;
 }
-.footer_section .fz_footer_container .links-group ul li a:hover {
+.footer_section .fz_footer_container .footer_list_link .links-group ul li a:hover {
   color: #00B2B1;
   letter-spacing: 0.4px;
   transition: all 1s ease;
+}
+.footer_section .fz_footer_container .subscribe {
+  width: 250px;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer_section .fz_footer_container .subscribe {
+    width: 400px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .subscribe {
+    margin: 30px 0px;
+  }
+}
+.footer_section .fz_footer_container .subscribe p {
+  font-size: 18px;
+  color: #C7DAD9;
+  font-weight: 400;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer_section .fz_footer_container .subscribe p {
+    text-align: center;
+  }
 }
 .footer_section .fz_footer_container .subscribe .subscribe-form {
   position: relative;
   margin: 20px 0px;
   display: inline-block;
 }
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer_section .fz_footer_container .subscribe .subscribe-form {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+}
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .subscribe .subscribe-form {
+    margin: 0;
+  }
+}
 .footer_section .fz_footer_container .subscribe .subscribe-form input {
-  width: 286px;
+  width: 290px;
   padding: 16px;
   font-size: 14px;
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
@@ -3929,6 +4002,11 @@ div#faq-animate svg {
   position: absolute;
   right: 19px;
   bottom: 19px;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer_section .fz_footer_container .subscribe .subscribe-form .footer_arrow img {
+    right: 75px;
+  }
 }
 .footer_section .footer-bottom .horizontal-line {
   border: none;
