--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -153,6 +153,11 @@ li {
   margin-top: 96px;
   margin-bottom: 0px;
 }
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_head h3 {
+    font-size: 100px;
+  }
+}
 #fz_product_list_feature .product_list_feature_head h4 {
   color: #d9d9d9;
   font-size: 144px;
@@ -160,6 +165,11 @@ li {
   line-height: 1.4;
   text-align: center;
   text-shadow: 0 0 1px rgba(56, 253, 181, 0.6823529412), 0 0 4px rgba(56, 253, 181, 0.431372549), 0 0 5px rgba(56, 253, 181, 0.3098039216), 0 6px 1px rgba(56, 253, 181, 0.2862745098), 0 0 5px rgba(56, 253, 181, 0.2117647059), 0 1px 3px rgba(56, 253, 181, 0.1450980392), 0 3px 5px rgba(56, 253, 181, 0.062745098), 0 1px 4px rgba(56, 253, 181, 0.0588235294), 0 0px 8px rgba(56, 253, 181, 0.0549019608), 0 0px 10px rgba(56, 253, 181, 0);
+}
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_head h4 {
+    font-size: 94px;
+  }
 }
 #fz_product_list_feature .product_list_feature_cards {
   position: relative;
@@ -930,11 +940,6 @@ li {
 }
 @media only screen and (max-width: 1200px) {
   #fin_bankz_sec .fin_bankz .fin_bankz_content {
-    width: 400px;
-  }
-}
-@media only screen and (max-width: 992px) {
-  #fin_bankz_sec .fin_bankz .fin_bankz_content {
     width: 100%;
   }
 }
@@ -1077,6 +1082,11 @@ li {
 #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product {
   width: 625px;
   height: 625px;
+}
+@media screen and (max-width: 1199px) {
+  #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product {
+    width: 100%;
+  }
 }
 #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product::before {
   content: "";
