--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -13,19 +13,30 @@
 
 
 .fz_footer_container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 2rem;
-  color: #c7c7c7;
-  @media screen and (max-width: 991px) {
-   display: block;
+  display: flex;
+  gap: 50px;
+  @media (min-width: 992px) and (max-width: 1199px) {
+    display: block;
+        width: 80%;
+        margin: 0 auto;
   }
+  @media screen and (max-width: 991px) {
+    display: block;
+   }
+
 
 .footer-brand {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 375px;
+  width: 330px;
+  @media (min-width: 992px) and (max-width: 1199px) {
+        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+  }
   @media screen and (max-width: 991px) {
     padding-bottom: 30px;
    }
@@ -40,8 +51,11 @@
   p {
     color: #949894;
     font-size: 14px;
-    width: 290px;
+    width: 315px;
     text-decoration: none;
+    @media (min-width: 992px) and (max-width: 1199px) {
+       text-align: center;
+  }
   }
 }
 
@@ -86,6 +100,20 @@
   }
  
 }
+.footer_list_link{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  color: #c7c7c7;
+  @media (min-width: 992px) and (max-width: 1199px) {
+        gap: 75px;
+        width: 70%;
+        margin: 40px auto;
+  }
+  @media screen and (max-width: 991px) {
+    display: block;
+   }
+
   .links-group {
     h4 {
       color: #C7DAD9;
@@ -122,17 +150,40 @@
       }
     }
   }
-
+}
 .subscribe{
-// width:330px;
-
+width:250px;
+@media (min-width: 992px) and (max-width: 1199px) {
+   width:400px;
+   margin: 0 auto;
+  }
+  @media screen and (max-width: 991px) {
+    margin: 30px 0px;
+   }
+p{
+  font-size: 18px;
+  color: #C7DAD9;
+  font-weight: 400;
+  @media (min-width: 992px) and (max-width: 1199px) {
+    text-align: center;
+}
+ 
+}
 .subscribe-form {
   position: relative;
   margin: 20px 0px;
   display: inline-block;
-  
+
+  @media (min-width: 992px) and (max-width: 1199px) {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+@media screen and (max-width: 991px) {
+    margin: 0;
+   }
   input {
-    width: 286px;
+    width: 290px;
     padding: 16px;
     font-size: 14px;
     background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
@@ -162,12 +213,15 @@
     outline: 0;
     box-shadow: rgba(0, 178, 177, 100) 0 0 5px 3px;
     }
-
+  
   }
   .footer_arrow img{
     position: absolute;
     right:19px;
     bottom:19px;
+    @media (min-width: 992px) and (max-width: 1199px) {
+       right:75px;
+    }
   }
 }
 }
